--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -377,7 +377,7 @@
     ")\n",
     "log(response)\n",
     "categories = json.loads(response.content)[\"categories\"]\n",
-    "category_type_lookup = {ct['category_id']:ct['type'] for ct in categories}"
+    "category_type_lookup = {ct[\"category_id\"]: ct[\"type\"] for ct in categories}"
    ]
   },
   {
@@ -929,7 +929,7 @@
     ")\n",
     "log(response)\n",
     "spatial_resolutions = json.loads(response.content)[\"spatial_resolutions\"]\n",
-    "srid_lookup = {f\"adm{sr['index']}\":sr['srid'] for sr in spatial_resolutions}"
+    "srid_lookup = {f\"adm{sr['index']}\": sr[\"srid\"] for sr in spatial_resolutions}"
    ]
   },
   {
@@ -979,7 +979,7 @@
     ")\n",
     "log(response)\n",
     "temporal_resolutions = json.loads(response.content)[\"temporal_resolutions\"]\n",
-    "trid_lookup = {tr['relativedelta_unit']:tr['trid'] for tr in temporal_resolutions}"
+    "trid_lookup = {tr[\"relativedelta_unit\"]: tr[\"trid\"] for tr in temporal_resolutions}"
    ]
   },
   {
@@ -1038,16 +1038,48 @@
    "outputs": [],
    "source": [
     "real_data_files = {\n",
-    "    \"residents\": {\"category_id\": \"residents\", \"srid\": srid_lookup['adm3'], \"trid\": trid_lookup['months']},\n",
-    "    \"relocations\": {\"category_id\": \"relocations\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['months']},\n",
-    "    \"presence\": {\"category_id\": \"presence\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['days']},\n",
-    "    \"movements\": {\"category_id\": \"movements\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['days']},\n",
+    "    \"residents\": {\n",
+    "        \"category_id\": \"residents\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"months\"],\n",
+    "    },\n",
+    "    \"relocations\": {\n",
+    "        \"category_id\": \"relocations\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"months\"],\n",
+    "    },\n",
+    "    \"presence\": {\n",
+    "        \"category_id\": \"presence\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"days\"],\n",
+    "    },\n",
+    "    \"movements\": {\n",
+    "        \"category_id\": \"movements\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"days\"],\n",
+    "    },\n",
     "}\n",
     "synthetic_files = {\n",
-    "    \"residents_admin3_monthly_small\": {\"category_id\": \"residents\", \"srid\": srid_lookup['adm3'], \"trid\": trid_lookup['months']},\n",
-    "    \"relocations_admin3_monthly_small\": {\"category_id\": \"relocations\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['months']},\n",
-    "    \"presence_admin3_daily_small\": {\"category_id\": \"presence\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['days']},\n",
-    "    \"movements_admin3_daily_small\": {\"category_id\": \"movements\", \"srid\":srid_lookup['adm3'], \"trid\": trid_lookup['days']},\n",
+    "    \"residents_admin3_monthly_small\": {\n",
+    "        \"category_id\": \"residents\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"months\"],\n",
+    "    },\n",
+    "    \"relocations_admin3_monthly_small\": {\n",
+    "        \"category_id\": \"relocations\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"months\"],\n",
+    "    },\n",
+    "    \"presence_admin3_daily_small\": {\n",
+    "        \"category_id\": \"presence\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"days\"],\n",
+    "    },\n",
+    "    \"movements_admin3_daily_small\": {\n",
+    "        \"category_id\": \"movements\",\n",
+    "        \"srid\": srid_lookup[\"adm3\"],\n",
+    "        \"trid\": trid_lookup[\"days\"],\n",
+    "    },\n",
     "}\n",
     "\n",
     "data_version = \"v1.0.2\"\n",
@@ -1057,7 +1089,8 @@
     "data_dir = f\"{parent_dir}/data/synthetic\" if SYNTHETIC else f\"{parent_dir}/data\"\n",
     "\n",
     "# Discard inf as well as na\n",
-    "pd.set_option('use_inf_as_na', True)\n",
+    "pd.set_option(\"use_inf_as_na\", True)\n",
+    "\n",
     "\n",
     "def to_su_list(val):\n",
     "    if isinstance(val, tuple):\n",
@@ -1065,20 +1098,19 @@
     "    else:\n",
     "        return [val]\n",
     "\n",
+    "\n",
     "for file_name, meta in files.items():\n",
     "    file_path = f\"{data_dir}/{file_name}.csv\"\n",
     "    preprocessed_path = f\"/tmp/{file_name}_preprocessed.csv\"\n",
-    "    df = pd.read_csv(file_path) # First column is the date\n",
+    "    df = pd.read_csv(file_path)  # First column is the date\n",
     "    if file_name in [\"residents\", \"presence\"]:\n",
     "        # min columns: date, spatial unit, one data column\n",
     "        df = df.rename(columns={\"pcod\": \"spatial_unit\"})\n",
     "        df[\"date\"] = pd.to_datetime(df.date)\n",
-    "        df = df.set_index([\"date\", \"spatial_unit\"])   \n",
+    "        df = df.set_index([\"date\", \"spatial_unit\"])\n",
     "    elif file_name in [\"relocations\", \"movements\"]:\n",
     "        # min columns: date, 2 spatial units, one data column\n",
-    "        df = df.rename(\n",
-    "            columns={'month': \"date\", \"pcod_from\": \"origin\", \"pcod_to\": \"destination\"}\n",
-    "        )\n",
+    "        df = df.rename(columns={\"month\": \"date\", \"pcod_from\": \"origin\", \"pcod_to\": \"destination\"})\n",
     "        df[\"date\"] = pd.to_datetime(df.date)\n",
     "        df = df.set_index([\"date\", \"origin\", \"destination\"])\n",
     "    df = df.sort_index()\n",
@@ -1095,27 +1127,28 @@
     "                        \"revision\": data_version,\n",
     "                        # adding a date here which will be overwritten later when it is actually added to the db\n",
     "                        # this is to avoid a fastapi.exceptions.RequestValidationError for checking the length of a \"None\" type\n",
-    "                            \"date_added\": datetime.utcnow().strftime(\"%Y-%m-%dT%H:%M:%S\"),\n",
-    "                            \"category_id\": meta['category_id'],\n",
-    "                            \"indicator_id\": f\"{meta['category_id']}.{column}\",\n",
-    "                            \"srid\": meta['srid'],\n",
-    "                            \"trid\": meta['trid'],\n",
-    "                            \"dt\": dt.strftime(\"%Y-%m-%dT%H:%M:%S\"),\n",
-    "                        },\n",
-    "                        \"data_type\": category_type_lookup[meta['category_id']],\n",
-    "                        \"data_input\": [\n",
-    "                            {\n",
-    "                                \"spatial_unit_ids\": to_su_list(rw[0]),\n",
-    "                                \"data\": rw[1],\n",
-    "                            } for rw in indicator_df.loc[dt].itertuples()\n",
-    "                        ],\n",
-    "                    }\n",
+    "                        \"date_added\": datetime.utcnow().strftime(\"%Y-%m-%dT%H:%M:%S\"),\n",
+    "                        \"category_id\": meta[\"category_id\"],\n",
+    "                        \"indicator_id\": f\"{meta['category_id']}.{column}\",\n",
+    "                        \"srid\": meta[\"srid\"],\n",
+    "                        \"trid\": meta[\"trid\"],\n",
+    "                        \"dt\": dt.strftime(\"%Y-%m-%dT%H:%M:%S\"),\n",
+    "                    },\n",
+    "                    \"data_type\": category_type_lookup[meta[\"category_id\"]],\n",
+    "                    \"data_input\": [\n",
+    "                        {\n",
+    "                            \"spatial_unit_ids\": to_su_list(rw[0]),\n",
+    "                            \"data\": rw[1],\n",
+    "                        }\n",
+    "                        for rw in indicator_df.loc[dt].itertuples()\n",
+    "                    ],\n",
+    "                }\n",
     "                fname = f\"./tmp/{meta['category_id']}_{column}_{meta['srid']}_{meta['trid']}_{dt.strftime('%Y-%m-%dT%H:%M:%S')}_{data_version}.json\"\n",
     "                with open(fname, \"w\") as fout:\n",
     "                    json.dump(dataset, fout)\n",
     "                    print(f\"Wrote {fname}\")\n",
     "            except KeyError:\n",
-    "                pass\n"
+    "                pass"
    ]
   },
   {
@@ -1165,6 +1198,7 @@
     "\n",
     "import pathlib\n",
     "\n",
+    "\n",
     "def chunked_iterable(iterable, size):\n",
     "    it = iter(iterable)\n",
     "    while True:\n",
@@ -1186,6 +1220,7 @@
     "        timeout=3600,\n",
     "    )\n",
     "\n",
+    "\n",
     "def yield_files_for_version(data_version):\n",
     "    files = pathlib.Path(\"tmp\").glob(f\"*_{data_version}.json\")\n",
     "    for fname in files:\n",
@@ -1196,8 +1231,10 @@
     "                print(exc)\n",
     "                print(fname)\n",
     "\n",
+    "\n",
     "def count_files_for_version(data_version):\n",
     "    return len(list(pathlib.Path(\"tmp\").glob(f\"*_{data_version}.json\")))\n",
+    "\n",
     "\n",
     "async def ingest_data_version(data_version, chunksize):\n",
     "    n_datasets = count_files_for_version(data_version)\n",
@@ -1262,14 +1299,14 @@
    "outputs": [],
    "source": [
     "data_access = {\n",
-    "    \"read:free_data\":{\n",
-    "            \"start_date\": \"2020-01\",\n",
-    "            \"duration\": 5,\n",
-    "        },\n",
-    "    \"read:premium_data\":{\n",
-    "            \"start_date\": \"2020-01\",\n",
-    "            \"duration\": 9999,\n",
-    "        },\n",
+    "    \"read:free_data\": {\n",
+    "        \"start_date\": \"2020-01\",\n",
+    "        \"duration\": 5,\n",
+    "    },\n",
+    "    \"read:premium_data\": {\n",
+    "        \"start_date\": \"2020-01\",\n",
+    "        \"duration\": 9999,\n",
+    "    },\n",
     "}"
    ]
   },
@@ -1325,12 +1362,12 @@
     "    for indicator in indicators:\n",
     "        query_to_sub = dict(**query)\n",
     "        query_to_sub[\"mdids_only\"] = True\n",
-    "        query_to_sub['category_id'] = indicator['category_id']\n",
-    "        query_to_sub['indicator_id'] = indicator['indicator_id']\n",
-    "        query_to_sub['srid'] = files[indicator['category_id']]['srid']\n",
-    "        query_to_sub['trid'] = files[indicator['category_id']]['trid']\n",
-    "        if files[indicator['category_id']]['trid'] == trid_lookup['days']:\n",
-    "            query_to_sub['duration'] = query['duration']*28\n",
+    "        query_to_sub[\"category_id\"] = indicator[\"category_id\"]\n",
+    "        query_to_sub[\"indicator_id\"] = indicator[\"indicator_id\"]\n",
+    "        query_to_sub[\"srid\"] = files[indicator[\"category_id\"]][\"srid\"]\n",
+    "        query_to_sub[\"trid\"] = files[indicator[\"category_id\"]][\"trid\"]\n",
+    "        if files[indicator[\"category_id\"]][\"trid\"] == trid_lookup[\"days\"]:\n",
+    "            query_to_sub[\"duration\"] = query[\"duration\"] * 28\n",
     "        response = httpx.post(\n",
     "            url=f\"{BASE_URL}/query\",\n",
     "            headers={\n",
@@ -1401,18 +1438,18 @@
    ],
    "source": [
     "for scope, mdid in scope_mappings:\n",
-    "        scope_mapping = {\"scope\": scope, \"mdid\": mdid}\n",
-    "        response = httpx.post(\n",
-    "            url=f\"{BASE_URL}/scope_mapping\",\n",
-    "            headers={\n",
-    "                \"Content-Type\": \"application/json\",\n",
-    "                \"Content-Encoding\": \"gzip\",\n",
-    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
-    "            },\n",
-    "            data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
-    "        )\n",
-    "        if response.status_code not in [201, 204, 303]:\n",
-    "            log(response)\n",
+    "    scope_mapping = {\"scope\": scope, \"mdid\": mdid}\n",
+    "    response = httpx.post(\n",
+    "        url=f\"{BASE_URL}/scope_mapping\",\n",
+    "        headers={\n",
+    "            \"Content-Type\": \"application/json\",\n",
+    "            \"Content-Encoding\": \"gzip\",\n",
+    "            \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "        },\n",
+    "        data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
+    "    )\n",
+    "    if response.status_code not in [201, 204, 303]:\n",
+    "        log(response)\n",
     "print(\"Done.\")"
    ]
   },
@@ -1424,14 +1461,14 @@
    "outputs": [],
    "source": [
     "response = httpx.post(\n",
-    "            url=f\"{BASE_URL}/scope_mapping\",\n",
-    "            headers={\n",
-    "                \"Content-Type\": \"application/json\",\n",
-    "                \"Content-Encoding\": \"gzip\",\n",
-    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
-    "            },\n",
-    "            data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
-    "        )"
+    "    url=f\"{BASE_URL}/scope_mapping\",\n",
+    "    headers={\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Content-Encoding\": \"gzip\",\n",
+    "        \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "    },\n",
+    "    data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
+    ")"
    ]
   },
   {
@@ -1455,14 +1492,19 @@
     "async with httpx.AsyncClient() as client:\n",
     "    for chunk in chunked_iterable(scope_mappings, size=25):\n",
     "        print(\".\", end=\"\", flush=True)\n",
-    "        responses = await asyncio.gather(*(client.post(\n",
-    "            url=f\"{BASE_URL}/scope_mapping\",\n",
-    "            headers={\n",
-    "                \"Content-Type\": \"application/json\",\n",
-    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
-    "            },\n",
-    "            data=json.dumps({\"scope\": scope, \"mdid\": mdid}).encode(\"utf-8\"),\n",
-    "        ) for scope, mdid in chunk))\n",
+    "        responses = await asyncio.gather(\n",
+    "            *(\n",
+    "                client.post(\n",
+    "                    url=f\"{BASE_URL}/scope_mapping\",\n",
+    "                    headers={\n",
+    "                        \"Content-Type\": \"application/json\",\n",
+    "                        \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "                    },\n",
+    "                    data=json.dumps({\"scope\": scope, \"mdid\": mdid}).encode(\"utf-8\"),\n",
+    "                )\n",
+    "                for scope, mdid in chunk\n",
+    "            )\n",
+    "        )\n",
     "        for response in responses:\n",
     "            if response.status_code not in [201, 204]:\n",
     "                pass\n",
@@ -1538,14 +1580,19 @@
     "async with httpx.AsyncClient() as client:\n",
     "    for chunk in chunked_iterable(scope_mappings, size=30):\n",
     "        print(\".\", end=\"\", flush=True)\n",
-    "        responses = await asyncio.gather(*(client.post(\n",
-    "            url=f\"{BASE_URL}/scope_mapping\",\n",
-    "            headers={\n",
-    "                \"Content-Type\": \"application/json\",\n",
-    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
-    "            },\n",
-    "            data=json.dumps({\"scope\": scope, \"mdid\": mdid}).encode(\"utf-8\"),\n",
-    "        ) for scope, mdid in chunk))\n",
+    "        responses = await asyncio.gather(\n",
+    "            *(\n",
+    "                client.post(\n",
+    "                    url=f\"{BASE_URL}/scope_mapping\",\n",
+    "                    headers={\n",
+    "                        \"Content-Type\": \"application/json\",\n",
+    "                        \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "                    },\n",
+    "                    data=json.dumps({\"scope\": scope, \"mdid\": mdid}).encode(\"utf-8\"),\n",
+    "                )\n",
+    "                for scope, mdid in chunk\n",
+    "            )\n",
+    "        )\n",
     "        for response in responses:\n",
     "            if response.status_code not in [201, 204]:\n",
     "                print(\"\")\n",
