--- a/jupyter/DebugAPI.ipynb
+++ b/jupyter/DebugAPI.ipynb
@@ -52,7 +52,11 @@
     "\n",
     "def log(response):\n",
     "    to_print = f\"{response.status_code}: \" if response.status_code != 200 else \"\"\n",
-    "    if hasattr(response, \"content\") and response.content is not None and response.content != b\"\":\n",
+    "    if (\n",
+    "        hasattr(response, \"content\")\n",
+    "        and response.content is not None\n",
+    "        and response.content != b\"\"\n",
+    "    ):\n",
     "        to_print += json.dumps(json.loads(response.content), indent=4)\n",
     "    else:\n",
     "        to_print += \"<no content>\"\n",
