--- a/jupyter/PopulateDatabase.ipynb
+++ b/jupyter/PopulateDatabase.ipynb
@@ -86,7 +86,11 @@
     "\n",
     "def log(response):\n",
     "    to_print = f\"{response.status_code}: \" if response.status_code != 200 else \"\"\n",
-    "    if hasattr(response, \"content\") and response.content is not None and response.content != b\"\":\n",
+    "    if (\n",
+    "        hasattr(response, \"content\")\n",
+    "        and response.content is not None\n",
+    "        and response.content != b\"\"\n",
+    "    ):\n",
     "        try:\n",
     "            to_print += json.dumps(json.loads(response.content), indent=4)\n",
     "        except Exception as e:\n",
@@ -392,8 +396,16 @@
     "    \"movements\": {\"category_id\": \"movements\", \"srid\": 3, \"trid\": 4},\n",
     "}\n",
     "synthetic_files = {\n",
-    "    \"residents_admin3_monthly_small\": {\"category_id\": \"residents\", \"srid\": 3, \"trid\": 2},\n",
-    "    \"relocations_admin3_monthly_small\": {\"category_id\": \"relocations\", \"srid\": 3, \"trid\": 2},\n",
+    "    \"residents_admin3_monthly_small\": {\n",
+    "        \"category_id\": \"residents\",\n",
+    "        \"srid\": 3,\n",
+    "        \"trid\": 2,\n",
+    "    },\n",
+    "    \"relocations_admin3_monthly_small\": {\n",
+    "        \"category_id\": \"relocations\",\n",
+    "        \"srid\": 3,\n",
+    "        \"trid\": 2,\n",
+    "    },\n",
     "    \"presence_admin3_daily_small\": {\"category_id\": \"presence\", \"srid\": 3, \"trid\": 4},\n",
     "    \"movements_admin3_daily_small\": {\"category_id\": \"movements\", \"srid\": 3, \"trid\": 4},\n",
     "}\n",
@@ -420,7 +432,11 @@
     "        df = df.dropna(thresh=4)\n",
     "        df = df.sort_values(by=[df.columns[0], df.columns[1], df.columns[2]])\n",
     "        df = df.rename(\n",
-    "            columns={df.columns[0]: \"date\", df.columns[1]: \"origin\", df.columns[1]: \"destination\"}\n",
+    "            columns={\n",
+    "                df.columns[0]: \"date\",\n",
+    "                df.columns[1]: \"origin\",\n",
+    "                df.columns[1]: \"destination\",\n",
+    "            }\n",
     "        )\n",
     "\n",
     "    df.to_csv(preprocessed_path, index=False)\n",
@@ -647,7 +663,9 @@
     "                                \"revision\": \"v0.1-demo\",\n",
     "                                # adding a date here which will be overwritten later when it is actually added to the db\n",
     "                                # this is to avoid a fastapi.exceptions.RequestValidationError for checking the length of a \"None\" type\n",
-    "                                \"date_added\": datetime.utcnow().strftime(\"%Y-%m-%dT%H:%M:%S\"),\n",
+    "                                \"date_added\": datetime.utcnow().strftime(\n",
+    "                                    \"%Y-%m-%dT%H:%M:%S\"\n",
+    "                                ),\n",
     "                                \"category_id\": category_id,\n",
     "                                \"indicator_id\": indicator_id,\n",
     "                                \"srid\": f[\"srid\"],\n",
@@ -680,9 +698,13 @@
     "                flush=True,\n",
     "            )\n",
     "\n",
-    "            for chunk in chunked_iterable(datasets[indicator_id].values(), size=CHUNK_SIZE):\n",
+    "            for chunk in chunked_iterable(\n",
+    "                datasets[indicator_id].values(), size=CHUNK_SIZE\n",
+    "            ):\n",
     "                print(\".\", end=\"\", flush=True)\n",
-    "                responses = await asyncio.gather(*(post_async(ds, client) for ds in chunk))\n",
+    "                responses = await asyncio.gather(\n",
+    "                    *(post_async(ds, client) for ds in chunk)\n",
+    "                )\n",
     "                for response in responses:\n",
     "                    if response.status_code not in [201, 204]:\n",
     "                        print(\"\")\n",
