--- a/jupyter/PopulateDatabase.ipynb
+++ b/jupyter/PopulateDatabase.ipynb
@@ -679,9 +679,11 @@
     "\n",
     "                    datasets[indicator_id][date_string][\"data_input\"].append(\n",
     "                        {\n",
-    "                            \"spatial_unit_ids\": [row[1]]\n",
-    "                            if category[\"type\"] == \"single_location\"\n",
-    "                            else [row[1], row[2]],\n",
+    "                            \"spatial_unit_ids\": (\n",
+    "                                [row[1]]\n",
+    "                                if category[\"type\"] == \"single_location\"\n",
+    "                                else [row[1], row[2]]\n",
+    "                            ),\n",
     "                            \"data\": value,\n",
     "                        }\n",
     "                    )\n",
